...
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginVertical="16dp"
        android:layout_marginBottom="17dp"
        android:background="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/inputDreamButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userStatus"
        app:layout_constraintVertical_bias="0.0" />

...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_text"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/dreamLogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:backgroundTint="@color/rosewood"
        android:fontFamily="casual"
...
