...
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="missing_item_field_error">Please fill in all fields!</string>
    <string name="input_dream_button">Input Dream</string>
    <string name="dream_log_button">View DreamLog</string>
    <string name="bottom_message">‧₊˚ ☁️⋅♡⋅☾⋅☁️ ˚₊‧</string>
    <string name="back_to_menu">Back To Menu</string>
    <string name="no_dreams">No dreams yet!</string>
    <string name="enter_keywords">Enter keywords…</string>
...
